--- a/Project_AUEB.ipynb
+++ b/Project_AUEB.ipynb
@@ -366,6 +366,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And a snippet of the 2nd solution can be seen below:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -760,7 +767,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This error may seem a consequence of faulty implementation, but sklearn's Linear Regression model with no restrictions yields a similarly large error, albeit not as astronomical as this one."
+    "This error may seem a consequence of faulty implementation, but `sklearn`'s Linear Regression model with no restrictions yields a similarly large error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OLS no intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_inter_model = LS_Model(y=y1, x=x1, include_coef_col=False)\n",
+    "no_inter_abundance = no_inter_model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67062.4384199842"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_inter_error = reconstruction_error(no_inter_model.y, no_inter_model.x, no_inter_abundance.T)\n",
+    "no_inter_error"
    ]
   },
   {
@@ -772,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -787,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -798,7 +843,7 @@
        "2424695.429849765"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -844,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -855,7 +900,7 @@
        "2427525.515551848"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,16 +921,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to enforce the sum-to-one constraint we will build our own function using methods from the `scipy.optimize` module. While there are other solutions, these tend to either be very complicated and hard to modify for our needs (such as the `CVXOPT` package) or not work because of memory constraints / implementation bugs (in this case the `cvxpy` package).\n",
+    "In order to enforce the sum-to-one constraint we will build our own function using methods from the `scipy.optimize` module. While there are other solutions, these tend to either be very complicated and hard to modify for our needs (such as the `CVXOPT` package) or to not work because of memory constraints / implementation bugs (in this case the `cvxpy` package).\n",
     "\n",
-    "Of note is that the current implementation needs to run a non-negative least squares and a coordinate descent with constraints routine for each one of our points, as the `nnls` function only supports vector calculations. This isn't as inefficient as it may sound, since the cost of the coordinate descent and non-negative least squares routines is proportionally much larger compared to the overhead of calling them for each point. \n",
+    "Of note is that the current implementation needs to run a non-negative least squares and a coordinate descent with constraints routine for each one of our points, as the `nnls` function only supports vector calculations. This isn't as inefficient as it may seem, since the cost of the coordinate descent and non-negative least squares routines is much larger proportionally compared to the overhead of calling them for each point. \n",
     "\n",
     "Still, the calculation may take some minutes to complete. We could speed it up by assigning each point's calculations to different threads, as the calculation is independent between them. However, we choose to keep the single-threaded code for the sake of clarity and simplicity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -964,7 +1009,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd14159b1f46465c86465c9393001500",
+       "model_id": "27c6305ad4224d07aaf835aaeaf36a95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -989,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1043,7 @@
        "((12829, 9), 12829)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -1020,7 +1065,7 @@
        "151083.76969310985"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -1048,7 +1093,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7bc57a75cd34179b1c5cba4de39d76b",
+       "model_id": "d25189fe0760490aa9ab3efcff0a0fb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1073,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1127,7 @@
        "((12829, 9), 9381, 0)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -1111,7 +1156,7 @@
        "4161801.393312393"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
@@ -1175,6 +1220,19 @@
        "            <td>-6631.420</td>\n",
        "            <td>-6238.872</td>\n",
        "            <td>-6609.833</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>OLS no interc.</td>\n",
+       "            <td>67062.438</td>\n",
+       "            <td>-36.069</td>\n",
+       "            <td>3.676</td>\n",
+       "            <td>-18.059</td>\n",
+       "            <td>-9.075</td>\n",
+       "            <td>-15.295</td>\n",
+       "            <td>-46.506</td>\n",
+       "            <td>-12.394</td>\n",
+       "            <td>-14.204</td>\n",
+       "            <td>-0.744</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>OLS pos</td>\n",
@@ -1236,6 +1294,7 @@
        "|      Model       | Reconstruction Error |     x1    |    x2    |     x3     |     x4    |     x5    |     x6    |     x7    |     x8    |     x9    |\n",
        "+------------------+----------------------+-----------+----------+------------+-----------+-----------+-----------+-----------+-----------+-----------+\n",
        "|       OLS        |      57505.150       | 11370.650 | 1492.548 | -10447.333 | -3862.049 | -3357.114 | -1974.905 | -6631.420 | -6238.872 | -6609.833 |\n",
+       "|  OLS no interc.  |      67062.438       |  -36.069  |  3.676   |  -18.059   |   -9.075  |  -15.295  |  -46.506  |  -12.394  |  -14.204  |   -0.744  |\n",
        "|     OLS pos      |     2424695.430      |   0.000   |  0.000   |   0.000    |   0.268   |   0.000   |   0.000   |   0.000   |   0.000   |   0.000   |\n",
        "|    LASSO pos     |     2427525.516      |   0.000   |  0.000   |   0.000    |   0.268   |   0.000   |   0.000   |   0.000   |   0.000   |   0.000   |\n",
        "|   OLS sum-to-1   |      151083.770      |  -41.842  |  7.105   |   5.302    |   1.403   |   0.034   |   -8.065  |   14.878  |   13.968  |   8.217   |\n",
@@ -1243,7 +1302,7 @@
        "+------------------+----------------------+-----------+----------+------------+-----------+-----------+-----------+-----------+-----------+-----------+"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,6 +1320,7 @@
     "res_table.float_format = \".3\"\n",
     "\n",
     "add_row(res_table, \"OLS\", base_error, base_abundance)\n",
+    "add_row(res_table, \"OLS no interc.\", no_inter_error, no_inter_abundance)\n",
     "add_row(res_table, \"OLS pos\", pos_error, pos_abundance)\n",
     "add_row(res_table, \"LASSO pos\", lasso_error, lasso_abundance)\n",
     "add_row(res_table, \"OLS sum-to-1\", sum1_error, sum1_abundance)\n",
@@ -1277,8 +1337,8 @@
     "\n",
     "1. The OLS model with no constraints leads to the best estimation by far in regards to the MSE error. This was certain to happen, since an optimization problem with no constraints will always have less or equal error to a constraint one (assuming same estimator and data). However, its solutions are also completely uninterpretable (huge positive and negative values).\n",
     "1. The MSE error is also relatively low when we force the coefficients to sum to one, but not necessarily be positive.\n",
-    "1. The OLS with positive coefficients has almost identical results with the LASSO estimator, indicating our problem does not need any regularization in the form of sparsity. In fact our model already comes very sparse when demanding a positive solution with no other constraints. \n",
-    "1. The OLS modeling a pdf (positive coefficients summing up to one) leads to a 20 times (!) the error compared to the one without the positive constraint. However, it's the only one with any interpretation: each coefficient represents the % presence of a material in a given pixel. Therefore, it's the only one which carries any explanatory information.\n",
+    "1. The OLS with positive coefficients has almost identical results with the LASSO estimator, indicating our problem does not need any regularization in the form of sparsity. In fact, our model already becomes very sparse when demanding a positive solution with no other constraints. \n",
+    "1. The OLS modeling a pdf (positive coefficients summing up to one) leads to 20 times (!) the error compared to the one without the positive constraint. However, it's the only one with the possibility of any interpretation: each coefficient represents the % presence of a material in a given pixel. Therefore, it's the only one which carries any explanatory information.\n",
     "\n",
     "So why is our most preferred solution the one with by far the biggest error? The answer is that by constraining our model so heavily, it can no longer reconstruct the original y values. This would be a catastrophic problem if we used this model for estimating the exact signatures or for prediction. Our use case however is unrelated to both of these, and thus the error isn't as meaningful. Besides, we have little reason to doubt our hypothesis since it very often holds and is widely used in practice `[1,2]`.\n",
     "\n",
@@ -1305,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1428,7 @@
        "+-------------+------------+------+------+-----+-----+------+------+"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -1403,7 +1463,7 @@
        "((6415, 103), (6415,))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -1429,7 +1489,7 @@
        "((3207, 103), (3207,))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -1455,7 +1515,7 @@
        "((3207, 103), (3207,))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -1534,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -1566,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -1587,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
@@ -1643,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -1666,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -1693,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -1787,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -1815,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
@@ -1844,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -1868,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
@@ -1896,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -1967,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {
     "tags": []
    },
@@ -1990,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
@@ -2018,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -2047,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2216,9 @@
     ">    \n",
     "> The second method has the advantage that selected end-members were collected under similar atmospheric conditions. End-members resulting through the first option are generally denoted as ‘known’, while those from the second option results are known as ‘derived’ end-members\n",
     "\n",
-    "which traditionally was performed using techniques such as PCA."
+    "which traditionally was performed using techniques such as PCA.\n",
+    "\n",
+    "> [4] van der Meer, F. (1999). Image classification through spectral unmixing. In Spatial Statistics for Remote Sensing (pp. 185-193). Dordrecht: Springer Netherlands."
    ]
   },
   {
@@ -2164,15 +2226,12 @@
    "metadata": {},
    "source": [
     "### Summary \n",
-    "In summary, spectral unmixing and classification are complementary techniques that can be used together to obtain a more comprehensive understanding of hyperspectral data. Spectral unmixing provides detailed sub-pixel information, especially for mixed pixels, while classification assigns discrete labels to pixels. Besides allowing a richer interpretation of the HSI, these techniques can generate data used by the other to collaboratively enhance their results (better interepretation in classification and more accurate end-member selection in SU).\n",
-    "\n",
-    "\n",
-    "> [4] van der Meer, F. (1999). Image classification through spectral unmixing. In Spatial Statistics for Remote Sensing (pp. 185-193). Dordrecht: Springer Netherlands."
+    "In summary, spectral unmixing and classification are complementary techniques that can be used together to obtain a more comprehensive understanding of hyperspectral data. Besides allowing a richer interpretation of the HSI, these techniques can generate data used by the other to collaboratively enhance their results (better interepretation in classification and more accurate end-member selection in SU)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -2181,7 +2240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook executed in 6 minutes and 6.9 seconds\n"
+      "Notebook executed in 6 minutes and 11.9 seconds\n"
      ]
     }
    ],
